# recipe-display

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DATA_SOURCES.md  LICENSE  NOTICE  README.md  RECIPE_IMPORT_AUDIT_REPORT.md  RECIPE_IMPORT_QUALITY_AUDIT_REPORT.md  docker-compose.yml  example_recipe.json  index.html  package-lock.json  package.json  pyproject.toml  reinstall_python_packages.sh  vite.config.js
new-structured-output/: .env.example  README.md  pyproject.toml
new-structured-output/src/new_structured_output/: generator.py
recipe_importer/: PARALLELISM_REPORT.md  README.md  RECIPE_SOURCES.md  THROUGHPUT_REPORT.md  __init__.py  auth_presets.json  importer.py  main.py  pyproject.toml  urls.json  urls_101cookbooks.json  urls_cookieandkate.json  urls_e2e_test.json  urls_english_test.json  urls_ftp_10.json  urls_ftp_5.json  urls_ftp_5_new.json  urls_ftp_audit.json  urls_ftp_new10.json  urls_ftp_remaining.json  urls_loveandlemons.json  urls_minimalistbaker.json  urls_ner_test.json  urls_quick_test.json  urls_smittenkitchen.json  urls_tartines_test.json  urls_test_langfuse.json  urls_tier_s_all.json  urls_tier_s_test.json
recipe_importer/data/url-recipes/: ottolenghi_recipes.json  tfrere-ottolenghi_recipes.json
recipe_importer/examples/: urls.json
recipe_importer/recipe-scrapping/ottolenghi/: recipes_urls_original.txt
recipe_importer/src/: __init__.py  api_client.py  convert_urls.py  importer.py  main.py  models.py  progress_tracker.py  recipe_processors.py  report.py
recipe_importer/tests/: test_recipe_processors.py
server/: .coverage  .dockerignore  .env.example  Dockerfile  INPROCESS_PIPELINE_REPORT.md  README.md  build-docker.sh  debug_startup.py  deploy.sh  generate_recipe.go  go.mod  go.sum  main.go  main.py  pyproject.toml  recipe.json  server.py
server/api/: dependencies.py  router.py
server/api/routes/: auth.py  authors.py  constants.py  images.py  recipe_files.py  recipes.py
server/cmd/test/: test_server.go
server/cmd/tools/: README.md  list_recipes.go  main.go
server/constants/: constants.json
server/data/: aja-tripolitan-bread-fritters.recipe.json  almond-and-orange-florentines.recipe.json  anchovy-butter-crostini-with-pink-pickled-mooli.recipe.json  anzac-biscuits-with-raisins-and-honey.recipe.json  apple-cake-with-maple-icing.recipe.json  apricot-almond-cake.recipe.json  authors.json  baharat.recipe.json  big-pot-of-chili.recipe.json  blackened-chicken-with-caramel-and-clementine-dressing.recipe.json  bramley-apple-cake-with-cream-cheese-icing.recipe.json  bundt-cake-with-spiced-plums.recipe.json  butternut-orange-and-sage-galette.recipe.json  butternut-squash-tahini-spread.recipe.json  carrot-and-mung-bean-salad.recipe.json  carrot-and-peas.recipe.json  chickpea-cauliflower-and-mango-salad.recipe.json  chocolate-dipped-peanut-butter-marshmallow-biscuits.recipe.json  cod-and-chickpea-tapas.recipe.json  crispy-almond-pistachio-and-cherry-wafers.recipe.json  fig-and-goat-s-cheese-tart.recipe.json  grilled-vegetables-with-mustard-parmesan-dressing.recipe.json  honey-roasted-carrots-with-tahini-yoghurt.recipe.json  laap-thailandais.recipe.json  legendaire-buche-de-noel.recipe.json  login-ottolenghi-books.recipe.json  mediterranean-cheese-and-egg-pastries.recipe.json  nestle-dark-chocolate-truffles.recipe.json  nutrition_gaps.json  one-pot-chickpeas-with-carrots-dates-and-marinated-feta.recipe.json  peach-and-raspberry-salad-with-chinese-5-spice.recipe.json  persian-love-rice-with-burnt-butter-tzatziki.recipe.json  pomelo-salad.recipe.json  powder-puffs-raspberry-and-rose.recipe.json  recipe.schema.json  roasted-asparagus-with-almonds-capers-and-dill.recipe.json  roasted-butternut-squash-with-buckwheat-polenta-and-lemon-tempura.recipe.json  roasted-carrot-and-mung-bean-salad.recipe.json  roasted-celeriac-steaks-with-caramelized-butter-sauce.recipe.json  roasted-celeriac-with-pickled-celery-and-chilli-dressing.recipe.json  (+11 more)
server/data/constants/: constants.json  glossary.json  seasonal_vegetables.json  servings_fixes.json
server/data/errors/: error_2025-01-10_15h20.json  error_2025-01-10_15h21.json  error_2025-01-10_15h31.json  error_2025-01-10_15h47.json  error_2025-01-10_16h13.json  error_2025-01-10_17h47.json  error_2025-01-10_18h03.json  error_2025-01-10_18h19.json  error_2025-01-11_17h17.json  error_2025-01-11_19h36.json  error_2025-01-11_19h51.json  error_2025-01-11_19h55.json  error_2025-01-11_20h00.json  error_2025-01-13_23h29.json  error_2025-01-14_00h21.json  error_2025-01-14_00h40.json  error_2025-01-14_00h51.json  error_2025-01-18_16h44.json  error_2025-01-19_17h32.json  error_2025-01-19_18h18.json  error_2025-01-20_01h19.json  error_2025-01-20_01h21.json  error_2025-01-20_01h23.json  error_2025-01-20_01h24.json  error_2025-01-20_01h25.json  error_2025-01-20_01h27.json  (+11 more)
server/examples/: generate_recipe.py
server/models/: progress.py  requests.py  responses.py
server/recipe_generator/: __init__.py  config.json  config.py
server/repositories/: __init__.py  json_file_repository.py  recipe_repository.py
server/scripts/: backfill_minerals.py  backfill_minerals_fast.py  backfill_nutrition_resolver.py  backfill_resolved_minerals.py  backfill_versioning.py  build_usda_portions_index.py  clean_recipe_titles.py  clean_recipes.py  download_recipes.py  fix_servings.py  fix_string_quantities.py  import_nutrition_sources.py  nutrition_audit.py  nutrition_healthcheck.py  re_enrich_default_quantities.py  re_enrich_nutrition.py  recategorize_ingredients.py  recipe_quality_audit.py  score_random_recipes.py  update_categories.py  upload_recipes.py  upload_recipes_chunked.py
server/services/: progress_service.py  recipe_service.py
server/tests/: conftest.py  test_integration.py  test_progress_service.py  test_recipe_generator.py  test_sse_endpoint.py
server/tools/: go.mod  go.sum  webpage_extractor.go
structured-output/: .env.example  .langchain.db  auth_presets.json  pyproject.toml
(+2332 files in other folders)
