[tool.poetry]
name = "structured-llm"
version = "0.1.0"
description = "A LLM provider agnostic structured output generator"
authors = ["Thibaud Frere"]
readme = "README.md"
packages = [{include = "structured_llm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
instructor = "^0.4.0"
anthropic = "^0.7.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
typing-extensions = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 