[tool.poetry]
name = "recipe-importer"
version = "0.1.0"
description = "Recipe importer for recipe-display"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.0.0"
aiohttp = "^3.8.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
recipe-importer = "recipe_importer.main:main"
