[tool.poetry]
name = "recipe_server"
version = "0.1.0"
description = "Recipe management server with FastAPI"
authors = ["Thibaud FRERE <thibaud.frere@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "services" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
aiofiles = "^23.2.1"
pydantic = "^2.5.2"
Pillow = "^10.2.0"
unidecode = "^1.3.7"
web-scraper = { path = "packages/web_scraper", develop = true }
recipe_structurer = { path = "packages/recipe_structurer", develop = true }
recipe-scraper = {path = "packages/recipe_scraper", develop = true}
huggingface-hub = "^0.30.2"
python-slugify = "^8.0.4"
requests = "^2.31.0"
python-multipart = "^0.0.9"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=server --cov-report=term-missing"

[tool.poetry.scripts]
volume-clean = "scripts.volume:clean_volume"
volume-copy = "scripts.volume:copy_to_volume"
volume-sync = "scripts.volume:sync_volume"
volume-server = "scripts.volume_uploader:main"
upload-recipes = "scripts.upload_recipes:upload_recipes"
clean-recipes = "scripts.clean_recipes:clean_recipes"
download-recipes = "scripts.download_recipes:download_recipes" 